<resources>
    <string name="app_name">Calculator</string>
    <string name="action_about">About</string>
    <string name="desc_eq">Equals</string>
    <string name="eq">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>
    <string name="plus">\u002B</string>
    <string name="minus">\u002D</string>
    <string name="divide">\u00F7</string>
    <string name="multiply">\u00D7</string>
    <string name="clear">DEL</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_memory_list">History</string>
    <string name="clear_all">Clear All</string>
</resources>
