<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.it2107.calc.calculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/numberContainers"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2.5"
        android:background="#E9E9E9"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingBottom="2.5sp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp">

        <HorizontalScrollView
            android:id="@+id/calculationPanel"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2.3"
            android:background="@android:color/transparent"
            android:fillViewport="true"
            android:paddingRight="0dp"
            android:scrollbars="none">

            <EditText
                android:id="@+id/calculation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:cursorVisible="false"
                android:focusable="false"
                android:gravity="end"
                android:inputType="none"
                android:textColor="#8C000000"
                android:textSize="24sp" />
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/resultsPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fillViewport="true"
            android:scrollbars="none">

            <EditText
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:cursorVisible="false"
                android:focusable="false"
                android:gravity="end"
                android:inputType="none"
                android:textColor="#B3000000"
                android:textSize="60sp" />
        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/numberContainers"
        android:layout_weight="1"
        android:background="#E9E9E9"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="#E9E9E9"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="2.5sp">

            <Button
                android:id="@+id/seven"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/seven"
                android:textSize="30sp" />


            <Button
                android:id="@+id/four"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/four"
                android:textSize="30sp" />

            <Button
                android:id="@+id/one"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/one"
                android:textSize="30sp" />

            <Button
                android:id="@+id/decimal"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/decimal"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="#E9E9E9"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="2.5sp">

            <Button
                android:id="@+id/eight"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/eight"
                android:textSize="30sp" />

            <Button
                android:id="@+id/five"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/five"
                android:textSize="30sp" />

            <Button
                android:id="@+id/two"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/two"
                android:textSize="30sp" />

            <Button
                android:id="@+id/zero"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/zero"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="#E9E9E9"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="2.5sp">

            <Button
                android:id="@+id/nine"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/nine"
                android:textSize="30sp" />

            <Button
                android:id="@+id/six"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/six"
                android:textSize="30sp" />

            <Button
                android:id="@+id/three"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/three"
                android:textSize="30sp" />

            <Button
                android:id="@+id/eq"
                style="@style/button_numeric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.25"
                android:contentDescription="@string/desc_eq"
                android:gravity="center"
                android:padding="7dp"
                android:stateListAnimator="@null"
                android:text="@string/eq"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="#E9E9E9"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="2.5sp">

            <Button
                android:id="@+id/clear"
                style="@style/button_operand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/clear"
                android:textSize="22sp" />

            <Button
                android:id="@+id/divide"
                style="@style/button_operand"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/divide"
                android:textSize="30sp" />

            <Button
                android:id="@+id/multiply"
                style="@style/button_operand"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/multiply"
                android:textSize="30sp" />

            <Button
                android:id="@+id/minus"
                style="@style/button_operand"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/minus"
                android:textSize="30sp" />

            <Button
                android:id="@+id/plus"
                style="@style/button_operand"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.5sp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/plus"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
